# Mtcnn_insightface

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wayne/mtcnn_insightface/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: arcface.cpp  arcface.h  arcface_jni.cpp  base.cpp  base.h  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
app/src/main/java/com/mtcnn_insightface/: ARCFACE.java  DoubleCalcSimActivity.java  FaceMapActivity.java  FaceRecognitionActivity.java  FileOperationActivity.java  FileUtil.java  FreeMatchActivity.java  MTCNN.java  MainActivity.java  PhotoUtil.java  ShowFaceActivity.java  SingleMatchActivity.java  TestDataSetActivity.java
app/src/main/res/layout/: activity_double_calc_sim.xml  activity_face_map.xml  activity_face_recognition.xml  activity_file_operation.xml  activity_free_match.xml  activity_main.xml  activity_show_face.xml  activity_single_match.xml  activity_test_data_set.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/example/wayne/mtcnn_insightface/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
